assets/css/style.css
/* import Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');


/* using imported fonts (from Google Fonts) */

.lato-thin {
  font-family: "Lato", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.lato-thin {
  font-family: "Lato", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.lato-light {
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.lato-regular {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.lato-bold {
  font-family: "Lato", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.lato-black {
  font-family: "Lato", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.lato-thin-italic {
  font-family: "Lato", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.lato-light-italic {
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.lato-regular-italic {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.lato-bold-italic {
  font-family: "Lato", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.lato-black-italic {
  font-family: "Lato", sans-serif;
  font-weight: 900;
  font-style: italic;
}

 /* Oswald font usage
 <uniquifier>: Use a uniquifier for the class name
<weight>: Use a value from 200 to 700

.oswald-<uniquifier> {
  font-family: "Oswald", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
} */


/* override default browser styles */
* {
  padding:0;
  margin: 0;
  box-sizing: border-box;
}

/* general styles */
body {
  min-height: 100vh; /* viewport height */
  display: flex;
  flex-direction: column;
  /* generic project styles */
  color:#3a3a3a;
  font-family: 'Lato', sans-serif;
}

h1 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

/* header */
header {
  background-color:#ffffff;
  padding: 0 1rem;
  position:fixed;
  z-index:99;
  width:100%;
  box-shadow: 0 2px 2px #3a3a3a;
  /*left &right shadow 0, top (doesn't matter)
  and bottom shadow 2px, blur 2px, shadow colour 3a3a3a*/
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

header a {
  text-decoration: none;
  color:inherit;
}

#menu {
  font-size: 110%;
  letter-spacing: 4px;
}

#menu ul {
  list-style-type: none;
}

.active {
  border-bottom: 1px solid #3a3a3a;
}

/* navbar styles with dropdown toggle */

nav{
  position:absolute; /* this removes previous styling, so we need to add it back in */
  background-color: #ffffff;
  width:100%;
  padding-left: 1rem;
  left: 0;
  box-shadow: 0 2px 2px #3a3a3a;
  /*left &right shadow 0, top (doesn't matter)
  and bottom shadow 2px, blur 2px, shadow colour 3a3a3a */
  display: none;
  top:100%;
}

/* van toggle */
#nav-toggle:checked ~ nav {
  display:block
}

/* hide checkbox */
#nav-toggle {
  display: none;
}

/* make X bigger */
.nav-toggle-label{
  font-size: 2rem;
}
/* main content */
main {
  background-color:lightblue;
  /* make main element take up any surplus space so footer is pushed down */
  flex: 1 0 auto;
}

/* footer */
footer {
  background-color:orange;
}

